Fix jumping scrollbar on body scroll lock. Update useScrollSpy threshold.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,10 @@
 	}
 }
 
+html {
+	scrollbar-gutter: stable !important;
+}
+
 .page-enter-active,
 .page-leave-active {
 	transition: all 0.4s;
